# petsiage-poc

./: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml  main.py  mypy.ini  pyproject.toml
config/: settings.py  urls.py
mealiq/: apps.py  urls.py  views.py
mealiq/services/: engine.py
mealiq/templates/layouts/: base.html
mealiq/templates/mealiq/: index.html
mealiq/templates/mealiq/partials/: dashboard.html  step0_vision.html  step1.html  step2.html  step3.html
