[project]
name = "petsiage-fullstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-stubs>=6.0.1",
    "gunicorn>=25.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]
